--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "firebase": "^12.9.0",
     "lucide-react": "^0.563.0",
@@ -18,7 +19,6 @@
     "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.4.0"
   },
-
   "devDependencies": {
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
